minimum list size, to avoid layout problems while loading

--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ a:active {
 	font-size: 2rem;
 	margin: 0;
 	padding: 0;
+	min-height: 120px;
 }
 
 #movies-list > li {
